crates/ruff_python_parser/tests/snapshots/invalid_syntax@invalid_match_pattern_target.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/invalid_match_pattern_target.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..64,
        body: [
            Match(
                StmtMatch {
                    node_index: NodeIndex(None),
                    range: 0..53,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 6..11,
                            id: Name("value"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 17..33,
                            node_index: NodeIndex(None),
                            pattern: MatchAs(
                                PatternMatchAs {
                                    node_index: NodeIndex(None),
                                    range: 22..28,
                                    pattern: Some(
                                        MatchValue(
                                            PatternMatchValue {
                                                node_index: NodeIndex(None),
                                                range: 22..23,
                                                value: NumberLiteral(
                                                    ExprNumberLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 22..23,
                                                        value: Int(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                    name: Some(
                                        Identifier {
                                            id: Name("_"),
                                            range: 27..28,
                                            node_index: NodeIndex(None),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 30..33,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 30..33,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            runtime_body: None,
                        },
                        MatchCase {
                            range: 38..53,
                            node_index: NodeIndex(None),
                            pattern: MatchMapping(
                                PatternMatchMapping {
                                    node_index: NodeIndex(None),
                                    range: 43..48,
                                    keys: [],
                                    patterns: [],
                                    rest: Some(
                                        Identifier {
                                            id: Name("_"),
                                            range: 46..47,
                                            node_index: NodeIndex(None),
                                        },
                                    ),
                                    runtime_keys: None,
                                    runtime_patterns: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 50..53,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 50..53,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            runtime_body: None,
                        },
                    ],
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(None),
                    range: 54..63,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 54..59,
                                id: Name("after"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(None),
                            range: 62..63,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                    runtime_targets: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | match value:
2 |     case 1 as _: ...
  |               ^ Syntax Error: cannot use '_' as a target
3 |     case {**_}: ...
4 | after = 1
  |


  |
1 | match value:
2 |     case 1 as _: ...
3 |     case {**_}: ...
  |             ^ Syntax Error: cannot use '_' as a target
4 | after = 1
  |
